# asteroids

./: README.md  asteroid.py  circleshape.py  main.py  player.py  pyproject.toml  shot.py
src/asteroids/: asteroid.py  asteroidfield.py  main.py  player.py  shot.py
tests/: test_player.py
